<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_areas">

    <fragment
        android:id="@+id/navigation_areas"
        android:name="com.example.area_android.ui.home.HomeFragment"
        android:label="@string/title_areas"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.area_android.ui.dashboard.DashboardFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.area_android.ui.notifications.NotificationsFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_notifications" />
</navigation>